--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ main > p{
     text-align: center; 
     font-size: 1.5em;
 }
+
+footer{
+    background-color: #751A23;
+    padding: 10px;
+}
+
+footer > p{
+    text-align: center;
+    color: white;
+    margin: 0px;
+    font-size: 1.1em;
+}
