adicionando informações para contato

--- a/outras paginas/style.css
+++ b/outras paginas/style.css
@@ -48,6 +48,10 @@ main > picture > img{
     padding-right: 20px;
 }
 
+.conteudo > li > a, .conteudo > li > a:visited{
+    color: #C52D3A;
+}
+
 li::marker{
     padding-left: 10px;
 }
