--- a/outras paginas/style.css
+++ b/outras paginas/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Teko:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+:root{
+    --fonte1: "Calistoga", Times, serif;
+    --fonte2: "Rubik", Arial, sans-serif;
+}
+
 body{
     margin: 0px;
     background-color: #EDE4DB;
@@ -14,6 +22,7 @@ header{
 }
 
 header > h1{
+    font-family: var(--fonte1);
     max-height: auto;
     color: #C52D3A;
     padding-top: 15px;
@@ -46,6 +55,7 @@ main > picture > img{
 }
 
 .conteudo{
+    font-family: var(--fonte2);
     max-width: 700px;
     min-width: 250px;
     display: block;
