--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Teko:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+:root{
+    --fonte1: "Calistoga", Times, serif;
+    --fonte2: "Rubik", Arial, sans-serif;
+}
+
 body{
     margin: 0px;
     background-color: #EDE4DB;
@@ -14,6 +22,7 @@ header{
 }
 
 header > h1{
+    font-family: var(--fonte1);
     max-height: auto;
     color: #C52D3A;
     padding-top: 15px;
@@ -30,6 +39,7 @@ header > h1{
 }
 
 main > p{
+    font-family: var(--fonte2);
     max-width: 700px;
     min-width: 250px;
     display: block;
@@ -43,6 +53,7 @@ main > p{
 }
 
 .opcao{
+    font-family: var(--fonte2);
     color: #EDE4DB;
     background-color: #C52D3A;
     padding: 10px 15px;
@@ -58,6 +69,7 @@ footer{
 }
 
 footer > p{
+    font-family: var(--fonte2);
     text-align: center;
     color: white;
     margin: 0px;
