--- a/outras paginas/style.css
+++ b/outras paginas/style.css
@@ -83,6 +83,7 @@ main > picture > img{
 }
 
 footer{
+    font-family: var(--fonte2);
     background-color: #751A23;
     padding: 10px;
     margin-top: 20px;
